# anket

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml
frontend/: Cargo.toml  globals.js  index.html
frontend/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  utils.rs  views.rs
server/src/models/: message.rs  mod.rs  poll.rs  user.rs
server/src/templates/: anket.css  poll-form.jinja  poll.js
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  utils.rs  views.rs
src/models/: poll.rs
src/templates/: 404.jinja  anket.css  base.jinja  poll-form.jinja  poll.jinja  poll.js
