[package]
name = "anket-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anket-shared = { path = "../shared" }

yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo-net = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3.28"
web-sys = "0.3.64"
